--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.473.0",
+		"motion": "^12.18.1",
 		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.2",
 		"react": "^19.0.0",
