--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"dev:web": "turbo -F web dev",
 		"dev:server": "turbo -F server dev"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"motion": "^12.18.1"
+	},
 	"devDependencies": {
 		"turbo": "^2.5.4",
 		"@biomejs/biome": "1.9.4",
