--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
 		"@radix-ui/react-select": "^2.2.5",
 		"@react-three/drei": "^10.3.0",
 		"@react-three/fiber": "^9.1.2",
+		"@react-three/postprocessing": "^3.0.4",
 		"@tailwindcss/vite": "^4.0.15",
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.80.5",
