--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
 		"build": "vite build",
 		"serve": "vite preview",
 		"start": "vite",
-		"check-types": "tsc --noEmit"
+		"check-types": "tsc --noEmit",
+		"generate-icons": "node scripts/generate-icons.js"
 	},
 	"devDependencies": {
 		"@tanstack/react-router-devtools": "^1.114.27",
@@ -20,7 +21,10 @@
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.0.15",
 		"vite": "^6.2.2",
-		"@tanstack/react-query-devtools": "^5.80.5"
+		"@tanstack/react-query-devtools": "^5.80.5",
+		"vite-plugin-pwa": "^0.20.0",
+		"workbox-window": "^7.2.0",
+		"canvas": "^2.11.2"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
@@ -45,6 +49,11 @@
 		"tailwind-merge": "^2.6.0",
 		"three": "^0.177.0",
 		"tw-animate-css": "^1.2.5",
-		"zod": "^3.25.16"
+		"zod": "^3.25.16",
+		"workbox-core": "^7.2.0",
+		"workbox-expiration": "^7.2.0",
+		"workbox-precaching": "^7.2.0",
+		"workbox-routing": "^7.2.0",
+		"workbox-strategies": "^7.2.0"
 	}
 }
