--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
 		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@radix-ui/react-select": "^2.2.5",
 		"@react-three/drei": "^10.3.0",
 		"@react-three/fiber": "^9.1.2",
@@ -47,11 +48,11 @@
 		"tailwind-merge": "^2.6.0",
 		"three": "^0.177.0",
 		"tw-animate-css": "^1.2.5",
-		"zod": "^3.25.16",
 		"workbox-core": "^7.2.0",
 		"workbox-expiration": "^7.2.0",
 		"workbox-precaching": "^7.2.0",
 		"workbox-routing": "^7.2.0",
-		"workbox-strategies": "^7.2.0"
+		"workbox-strategies": "^7.2.0",
+		"zod": "^3.25.16"
 	}
 }
